--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
 
     <section id="Abschnitt3">
          <h2>Lieblings Module</h2>
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum debitis laborum doloremque ipsam neque, voluptas obcaecati facere quisquam aperiam velit delectus ullam at hic unde iure odit eligendi omnis nihil optio eos culpa a voluptatibus quos? Accusantium mollitia facere in quia ducimus necessitatibus quaerat quae! Esse doloremque eos non eius?</p>
+         <p>Modul 164 - SQL</p> 
+         <p>Dieses Modul hat mir gefallen, weil wir mehr über Datenbanken lernen konnten. Zwar hatten wir bereits zuvor ein Modul zu diesem Thema, aber in diesem Modul wurde das Wissen vertieft, und die Inhalte begannen für mich mehr Sinn zu ergeben. Besonders gut fand ich auch die Leistungsbeurteilung, bei der wir ein Projekt durchgeführt haben, in dem wir unsere eigene Datenbank erstellt haben. Ich kann keinen konkreten Grund nennen, aber dieses Projekt hat mir einfach Spass gemacht.</p> <br>
+         
+         <p>Modul 431 - Aufträge im Berufsumfeld</p>
+         <p>Dies war eines meiner ersten Module. Es war ein gutes Einstiegsmodul, in dem man die grundlegenden Aspekte der Informatik kennenlernte, zum Beispiel, wie man eine Dokumentation schreibt, den Umgang mit Excel, IPERKA und vieles mehr. Mir ist bewusst, dass es nicht das spannendste Thema ist, aber das Lernen all dieser neuen Dinge hat mir viel Spass gemacht.</p> <br>
+
+         <p>Modul 298 - Webauftritt erstellen</p>
+         <p>Dieses Modul war definitiv mein Lieblingsmodul. Ich habe große Freude daran, Webseiten zu entwickeln, besonders wenn sie visuell ansprechend sind. Auch in diesem Modul bestand die Leistungsbeurteilung aus einem Projekt, bei dem wir eine Webseite mit mehreren Unterseiten erstellen mussten. Das hat mir sehr gefallen, weil man beim Programmieren die Veränderungen sofort sehen konnte. Es hat einfach unglaublich viel Spass gemacht, die Webseite zu gestalten, weil dabei auch ein ästhetischer Aspekt eine Rolle spielte.</p>
     </section>
 
   </main>
