--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main>
     <section id="Abschnitt1">
       <h2>Über mich</h2>
-      <p>Ich bin 16 Jahre alt und aktuell Schülerin an der Informatikschule, wo ich zur angehenden Informatikerin EFZ ausgebildet werde. Die Welt der Informatik fasziniert mich besonders, da ich es wie ein Puzzle betrachte: Es macht mir großen Spaß, Probleme zu lösen und kreative Lösungen zu finden. Bisher habe ich Erfahrungen mit C#, SQL, HTML und CSS gesammelt. Am liebsten arbeite ich mit HTML und CSS, weil ich es spannend finde, visuell ansprechende Webseiten zu gestalten. Aber ich bin immer offen für Neues und liebe es, dazuzulernen.</p>
+      <p>Ich bin 16 Jahre alt und aktuell Schülerin an der Informatikschule, wo ich zur angehenden Informatikerin EFZ ausgebildet werde. Die Welt der Informatik fasziniert mich besonders, da ich es wie ein Puzzle betrachte: Es macht mir grossen Spass, Probleme zu lösen und kreative Lösungen zu finden. Bisher habe ich Erfahrungen mit C#, SQL, HTML und CSS gesammelt. Am liebsten arbeite ich mit HTML und CSS, weil ich es spannend finde, visuell ansprechende Webseiten zu gestalten. Aber ich bin immer offen für Neues und liebe es, dazuzulernen.</p>
     </section>
 
     <section id="Abschnitt2">
@@ -35,17 +35,17 @@
       
 
       <p class="Projekte">Erdbeerschoggi Spiel:<br>
-        Mein zweites Projekt (auch mit C#), wo ich zum ersten mal mit jemanden am Projekt zusammen gearbeitet habe. <br>
+        Mein zweites Projekt (auch mit C#), bei dem ich zum ersten Mal mit jemandem am Projekt zusammengearbeitet habe. <br>
         <a href="https://github.com/erdbeerschoggi/Lern-Periode-2">Link zum Repository</a>
       </p>
 
       <p class="Projekte">Winforms Projekte:<br>
-        Mein erstes Projekt auf Winforms. Da ich inn dieser Lernperiode mehr Zeit hatte als gedacht konnte ich 2 Sachen programmieren und zwar einen Taschenrechner und ein TicTacToe Spiel. <br>
+        Mein erstes Projekt auf Winforms. Da ich in dieser Lernperiode mehr Zeit hatte als gedacht, konnte ich 2 Sachen programmieren, und zwar einen Taschenrechner und ein TicTacToe-Spiel. <br>
         <a href="https://github.com/erdbeerschoggi/Lernperiode-3">Link zum Repository</a>
       </p>
 
       <p class="Projekte">Essensgenerator auf Winforms:<br>
-        Nachdem kennenlernen von Winforms erstellte ich einen Essensgenerator der mir immer zu drei Optionen 2 Gerichte generiert. <br>
+        Nach dem Kennenlernen von Windform erstellte ich einen Essensgenerator, der mir immer zu drei Optionen zwei Gerichte generiert. <br>
         <a href="https://github.com/erdbeerschoggi/Lernperiode-4">Link zum Repository</a>
       </p>
 
@@ -55,13 +55,13 @@
     <section id="Abschnitt3">
          <h2>Lieblings Module</h2>
          <p>Modul 164 - SQL</p> 
-         <p>Meine Meinung und wie ich es fand.</p> <br>
+         <p>Dieses Modul hat mir gefallen, weil wir mehr über Datenbanken lernen konnten. Zwar hatten wir bereits zuvor ein Modul zu diesem Thema, aber in diesem Modul wurde das Wissen vertieft und die Inhalte begannen für mich mehr Sinn zu ergeben. Besonders gut fand ich auch die Leistungsbeurteilung, bei der wir ein Projekt durchgeführt haben, in dem wir unsere eigene Datenbank erstellt haben. Ich kann keinen konkreten Grund nennen, aber dieses Projekt hat mir einfach Spass gemacht.</p> <br>
          
          <p>Modul 431 - Aufträge im Berufsumfeld</p>
-         <p>Meine Meinung und wie ich es fand.</p></p> <br>
+         <p>Dies war eines meiner ersten Module. Es war ein gutes Einstiegsmodul, in dem man die grundlegenden Aspekte der Informatik kennenlernte, zum Beispiel, wie man eine Dokumentation schreibt, den Umgang mit Excel, IPERKA und vieles mehr. Mir ist bewusst, dass es nicht das spannendste Thema ist, aber das Lernen all dieser neuen Dinge hat mir viel Spass gemacht.</p> <br>
 
          <p>Modul 298 - Webauftritt erstellen</p>
-         <p>Meine Meinung und wie ich es fand.</p>
+         <p>Dieses Modul war definitiv mein Lieblingsmodul. Ich habe grosse Freude daran, Webseiten zu entwickeln, besonders wenn sie visuell ansprechend sind. Auch in diesem Modul bestand die Leistungsbeurteilung aus einem Projekt, bei dem wir eine Webseite mit mehreren Unterseiten erstellen mussten. Das hat mir sehr gefallen, weil man beim Programmieren die Veränderungen sofort sehen konnte. Es hat einfach unglaublich viel Spass gemacht, die Webseite zu gestalten, weil dabei auch ein ästhetischer Aspekt eine Rolle spielte.</p>
     </section>
 
   </main>
