--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,44 +8,44 @@
 </head>
 <body>
   <header>
-    <img src="https://cdn.pixabay.com/photo/2018/05/04/00/09/design-3372889_1280.jpg" alt="Maja Piotrowska"  height="300">
+    <img src="design-3372889_1280.webp" alt="Maja Piotrowska"  height="300">
     <h1>Maja Piotrowska</h1>
     <p>Angehende Informatikerin EFZ</p>
   </header>
 
         <nav>
-            <button><a href="#Abschnitt1">Über mich</a></button> 
-            <button><a href="#Abschnitt2">Meine Projekte</a></button> 
-            <button><a href="#Abschnitt3">Module</a></button>
+            <a class="NavLink" href="#Abschnitt1">Über mich</a>
+            <a class="NavLink" href="#Abschnitt2">Meine Projekte</a> 
+            <a class="NavLink" href="#Abschnitt3">Module</a>
         </nav>
 
   <main>
     <section id="Abschnitt1">
       <h2>Über mich</h2>
-      <p>Ich bin 16 Jahre alt und aktuell Schülerin an der Informatikschule, wo ich zur angehenden Informatikerin EFZ ausgebildet werde. Die Welt der Informatik fasziniert mich besonders, da ich es wie ein Puzzle betrachte: Es macht mir grossen Spass, Probleme zu lösen und kreative Lösungen zu finden. Bisher habe ich Erfahrungen mit C#, SQL, HTML und CSS gesammelt. Am liebsten arbeite ich mit HTML und CSS, weil ich es spannend finde, visuell ansprechende Webseiten zu gestalten. Aber ich bin immer offen für Neues und liebe es, dazuzulernen.</p>
+      <p>Ich bin 16 Jahre alt und aktuell Schülerin an der Informatikschule, wo ich zur Informatikerin EFZ ausgebildet werde. Die Welt der Informatik fasziniert mich besonders, da ich es wie ein Puzzle betrachte: Es macht mir grossen Spass, Probleme zu lösen und kreative Lösungen zu finden. Bisher habe ich Erfahrungen mit C#, SQL, HTML und CSS gesammelt. Am liebsten arbeite ich mit HTML und CSS, weil ich es spannend finde, visuell ansprechende Webseiten zu gestalten. Aber ich bin immer offen für Neues und liebe es, dazuzulernen.</p>
     </section>
 
     <section id="Abschnitt2">
       <h2>Meine Projekte</h2>
       <p class="Projekte">Tictactoe Spiel: <br>
         Mein aller erstes Projekt, das ich mit C# erstellt habe. <br>
-        <a href="https://github.com/erdbeerschoggi/Lern-Periode-1">Link zum Repository</a>
+        <a href="https://github.com/erdbeerschoggi/Lern-Periode-1" target="_blank" rel="noopener">Link zum Repository</a>
       </p>
       
 
       <p class="Projekte">Erdbeerschoggi Spiel:<br>
         Mein zweites Projekt (auch mit C#), bei dem ich zum ersten Mal mit jemandem am Projekt zusammengearbeitet habe. <br>
-        <a href="https://github.com/erdbeerschoggi/Lern-Periode-2">Link zum Repository</a>
+        <a href="https://github.com/erdbeerschoggi/Lern-Periode-2" target="_blank" rel="noopener">Link zum Repository</a>
       </p>
 
       <p class="Projekte">Winforms Projekte:<br>
         Mein erstes Projekt auf Winforms. Da ich in dieser Lernperiode mehr Zeit hatte als gedacht, konnte ich 2 Sachen programmieren, und zwar einen Taschenrechner und ein TicTacToe-Spiel. <br>
-        <a href="https://github.com/erdbeerschoggi/Lernperiode-3">Link zum Repository</a>
+        <a href="https://github.com/erdbeerschoggi/Lernperiode-3" target="_blank" rel="noopener">Link zum Repository</a>
       </p>
 
       <p class="Projekte">Essensgenerator auf Winforms:<br>
         Nach dem Kennenlernen von Windform erstellte ich einen Essensgenerator, der mir immer zu drei Optionen zwei Gerichte generiert. <br>
-        <a href="https://github.com/erdbeerschoggi/Lernperiode-4">Link zum Repository</a>
+        <a href="https://github.com/erdbeerschoggi/Lernperiode-4" target="_blank" rel="noopener">Link zum Repository</a>
       </p>
 
     </section>
@@ -54,14 +53,15 @@
 
     <section id="Abschnitt3">
          <h2>Lieblings Module</h2>
+         <p>An der IMS in Baden bearbeiten wir verschiedene Module. Jedes Modul behandelt ein bestimmtes Thema, das wir im Verlauf durcharbeiten. Am Ende erstellen wir dazu einen Lernbeleg, der unser Verständnis und unsere Arbeit zum Thema dokumentiert.</p> <br>
          <p>Modul 164 - SQL</p> 
          <p>Dieses Modul hat mir gefallen, weil wir mehr über Datenbanken lernen konnten. Zwar hatten wir bereits zuvor ein Modul zu diesem Thema, aber in diesem Modul wurde das Wissen vertieft und die Inhalte begannen für mich mehr Sinn zu ergeben. Besonders gut fand ich auch die Leistungsbeurteilung, bei der wir ein Projekt durchgeführt haben, in dem wir unsere eigene Datenbank erstellt haben. Ich kann keinen konkreten Grund nennen, aber dieses Projekt hat mir einfach Spass gemacht.</p> <br>
          
          <p>Modul 431 - Aufträge im Berufsumfeld</p>
          <p>Dies war eines meiner ersten Module. Es war ein gutes Einstiegsmodul, in dem man die grundlegenden Aspekte der Informatik kennenlernte, zum Beispiel, wie man eine Dokumentation schreibt, den Umgang mit Excel, IPERKA und vieles mehr. Mir ist bewusst, dass es nicht das spannendste Thema ist, aber das Lernen all dieser neuen Dinge hat mir viel Spass gemacht.</p> <br>
 
-         <p>Modul 298 - Webauftritt erstellen</p>
-         <p>Dieses Modul war definitiv mein Lieblingsmodul. Ich habe grosse Freude daran, Webseiten zu entwickeln, besonders wenn sie visuell ansprechend sind. Auch in diesem Modul bestand die Leistungsbeurteilung aus einem Projekt, bei dem wir eine Webseite mit mehreren Unterseiten erstellen mussten. Das hat mir sehr gefallen, weil man beim Programmieren die Veränderungen sofort sehen konnte. Es hat einfach unglaublich viel Spass gemacht, die Webseite zu gestalten, weil dabei auch ein ästhetischer Aspekt eine Rolle spielte.</p>
+         <p>Modul 293 - Webauftritt erstellen</p>
+         <p>Dieses Modul war definitiv mein Lieblingsmodul. Ich habe grosse Freude daran, Webseiten zu entwickeln, besonders wenn sie visuell ansprechend sind. Auch in diesem Modul bestand die Leistungsbeurteilung aus einem Projekt, bei dem wir eine Webseite mit mehreren Unterseiten erstellen mussten. Das hat mir sehr gefallen, weil man beim Programmieren die Veränderungen sofort sehen konnte. Es hat einfach unglaublich viel Spass gemacht, die Webseite zu gestalten, weil dabei auch ein ästhetischer Aspekt eine Rolle spielte. </p>
     </section>
 
   </main>
